Transformed setup.py so that scripts former run.py and annotate_vcf.py are installed under the venv bin directory so that their always within the current PATH

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,8 @@
 include LICENSE
 include MANIFEST.in
-include README.rst
+include README.md
 include setup.py
-include run.py
+recursive-include variantapi/test *.csv
+recursive-include variantapi/test *.vcf
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
