Adds step to split variant list into many files

--- a/conf/base.config
+++ b/conf/base.config
@@ -5,6 +5,9 @@ params {
 
 
     // optional
+    variant_query_size = 10000
+    variant_query_set_suffix_lenght = 10
+
     species = 'homo_sapiens'
     help = false
 
