--- a/conf/local.config
+++ b/conf/local.config
@@ -9,6 +9,10 @@ params {
     input = 'test_data/sample_parabrics_conv_gvcf.vcf'
     outdir = 'results'
 
+    // Optional
+    variant_query_size = 10
+    variant_query_set_suffix_lenght = 2
+
     // resources
     max_cpus = 4
     max_memory = 15.GB
