Adds step to annotate sets of variants

--- a/conf/base.config
+++ b/conf/base.config
@@ -7,6 +7,13 @@ params {
     // optional
     variant_query_size = 10000
     variant_query_set_suffix_lenght = 10
+    genome = 'hg38'
+    key = false
+    add_all_data = 1
+    add_ACMG_annotation = 1
+    add_source_databases = 'all'
+    add_region_databases = 'all'
+    expand_pubmed_articles = 0
 
     species = 'homo_sapiens'
     help = false
