--- a/conf/local.config
+++ b/conf/local.config
@@ -12,6 +12,13 @@ params {
     // Optional
     variant_query_size = 10
     variant_query_set_suffix_lenght = 2
+    genome = 'hg38'
+    key = false
+    add_all_data = 1
+    add_ACMG_annotation = 1
+    add_source_databases = 'all'
+    add_region_databases = 'all'
+    expand_pubmed_articles = 0
 
     // resources
     max_cpus = 4
