--- a/conf/proc_resources.config
+++ b/conf/proc_resources.config
@@ -14,6 +14,13 @@ process {
   maxErrors = '-1'
 
   // Process-specific resource requirements
+
+  withProcess: annotate_variants {
+    cpus = 1
+    memory = 1.GB
+    time = { check_max( 8.h * task.attempt, 'time' ) }
+  }
+
   withLabel: tiny_memory {
     cpus = { check_max (4, 'cpus')}
     memory = { check_max( 10.GB * task.attempt, 'memory' ) }
