Adds step to filter variants by pathogenicity

--- a/conf/base.config
+++ b/conf/base.config
@@ -14,6 +14,7 @@ params {
     add_source_databases = 'all'
     add_region_databases = 'all'
     expand_pubmed_articles = 0
+    pathogenicity_filter_values = 'test_data/pathogenicity_filters.txt'
 
     species = 'homo_sapiens'
     help = false
