--- a/conf/local.config
+++ b/conf/local.config
@@ -19,6 +19,7 @@ params {
     add_source_databases = 'all'
     add_region_databases = 'all'
     expand_pubmed_articles = 0
+    pathogenicity_filter_values = 'test_data/pathogenicity_filters.txt'
 
     // resources
     max_cpus = 4
